Fixed mobile issues.
- Fixed divider floating at the top of the page.
- Fixed rubber-bandy scrolling when the <p> elements are tapped on mobile (removed overflows from <html> CSS).
- Extended <section>s to full page width.

--- a/style.css
+++ b/style.css
@@ -30,13 +30,12 @@
 transform: translateY(0%);
 }
 
-html, body {
-    max-width: 100%;
+body {
+    /* max-width: 100%; */
     /* overflow-y: scroll; */
     overflow-x: hidden;
-}
+    overflow-y: auto;
 
-body {
     margin: 0;
     font-size: 20px;
 
@@ -68,8 +67,16 @@ header {
 }
 
 section {
-    width: 100% !important;
+    overflow: hidden;
+    width: 104vw !important;
+    margin-top: -4px !important;
+    margin-bottom: -4px !important;
+    display:inline-block;
     padding-bottom: 32px;
+    position: relative;
+    touch-action: pan-y;
+
+    background-color: #fff;
 }
 
 header .strip {
@@ -147,10 +154,6 @@ header h2 {
     margin-right: 8px;
 } */
 
-section {
-    background-color: #fff;
-}
-
 section h2 {
     font-family: var(--t-f);
     font-weight: 200;
@@ -190,6 +193,10 @@ section p {
     color: #000;
 
     font-size: 1em;
+
+    overflow: hidden;
+    pointer-events: none;
+    touch-action: none;
 }
 
 section li {
